--- a/restroom/index.html
+++ b/restroom/index.html
@@ -29,7 +29,7 @@
       </section>
 
       <!-- PLAYER + KOMENTAR -->
-      <section class="player-section">
+      <section class="player-section" id="playerPanel">
         <div class="player-card">
           <div class="player-thumb" id="playerThumb">
             <span>Pilih video untuk mulai menonton ✨</span>
